--- a/notebooks/annotation.ipynb
+++ b/notebooks/annotation.ipynb
@@ -1,26 +1,319 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "a6bd81de",
+   "metadata": {},
+   "source": [
+    "* Download individual annotation files labelled using label-studio\n",
+    "* Some of the images labelled don't have object in them at all, so annotation file is remapped to take care of it.\n",
+    "* In addition, filter out the images that have object in them so that only those images can be used for further processing\n",
+    "* Also, combine v1 & v2 annotation files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "565ee7c1",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!pip -q install pycocotools\n",
+    "!pip -q install albumentations\n",
+    "!pip -q install torch torchvision\n",
+    "!pip -q install matplotlib seaborn imutils opencv-contrib-python scikit-learn\n",
+    "!pip -q install pandas mapcalc boto3\n",
+    "!sudo apt-get update && sudo apt-get install ffmpeg libsm6 libxext6  -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfdf674c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Add src folder to the path\n",
+    "import sys; sys.path.append(\"../src\")\n",
+    "import os\n",
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = \"1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "891b866b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Import functions from annotator file\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "from annotator import (\n",
+    "    _read_json_file,\n",
+    "    combine_coco_files,\n",
+    "    combine_two_coco_files,\n",
+    "    remap_coco_annotations,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5c4dc7c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "coco_data_v1 = remap_coco_annotations(Path(\"../data/annotations/v1.json\"), selected_labels=[0])\n",
+    "coco_data_v2 = remap_coco_annotations(Path(\"../data/annotations/v2.json\"), selected_labels=[0])\n",
+    "combined_coco_path = '../data/annotations/v1_v2.json'\n",
+    "\n",
+    "combined_coco = combine_coco_files([coco_data_v1, coco_data_v2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d575c6",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# when exporting coco file from label-studio, filename is modified a little bit.\n",
+    "# so rename the filenames in the coco file to actual image names\n",
+    "# Export the final coco file with the modified file names\n",
+    "\n",
+    "def extract_text_after_first_dash(s):\n",
+    "    # Split the string at the first dash\n",
+    "    parts = s.split('-', 1)\n",
+    "    # Return the part after the first dash\n",
+    "    return parts[1] if len(parts) > 1 else ''\n",
+    "\n",
+    "def modify_file_names(images):\n",
+    "    for image in images:\n",
+    "        if 'file_name' in image:\n",
+    "            original_file_name = image['file_name']\n",
+    "            modified_file_name = extract_text_after_first_dash(original_file_name)\n",
+    "            image['file_name'] = modified_file_name\n",
+    "\n",
+    "modify_file_names(combined_coco[\"images\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4fd0b24",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open(combined_coco_path, \"w\") as f:\n",
+    "    json.dump(combined_coco, f)\n",
+    "\n",
+    "len(combined_coco['images']), len(combined_coco['annotations'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6485146",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Extract only the images that are in the final coco file\n",
+    "images_with_object = [item['file_name'] for item in combined_coco['images']]\n",
+    "\n",
+    "# print(images_with_object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1807a0b1",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Move the images that have object in them to a different folder\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "# Replace these with your actual paths\n",
+    "source_dir = '../data/images_v2'\n",
+    "destination_dir = '../data/images_v2_filtered'\n",
+    "\n",
+    "# Ensure destination directory exists\n",
+    "os.makedirs(destination_dir, exist_ok=True)\n",
+    "\n",
+    "# Move each file\n",
+    "for file_name in images_with_object:\n",
+    "    source_path = os.path.join(source_dir, file_name)\n",
+    "    destination_path = os.path.join(destination_dir, file_name)\n",
+    "\n",
+    "    try:\n",
+    "        shutil.move(source_path, destination_path)\n",
+    "        # print(f\"Moved: {file_name}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"File not found: {file_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d3aa80b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2a2cf92",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b00ef36",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Unzip folder\n",
+    "import zipfile\n",
+    "import shutil\n",
+    "\n",
+    "# Zipped folder path\n",
+    "zipped_folder_path = '../data/sample_images.zip'\n",
+    "\n",
+    "# Destination folder path\n",
+    "destination_folder_path = '../data/sample_images'\n",
+    "\n",
+    "# Open the zipped folder\n",
+    "with zipfile.ZipFile(zipped_folder_path, 'r') as zip_file:\n",
+    "\n",
+    "    # Extract all of the files from the zipped folder to the current working directory\n",
+    "    zip_file.extractall(destination_folder_path)\n",
+    "\n",
+    "    # Close the zipped folder\n",
+    "    zip_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f422496",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# zip a folder\n",
+    "import os\n",
+    "import zipfile\n",
+    "\n",
+    "def zip_folder(folder_path, output_path):\n",
+    "    with zipfile.ZipFile(output_path, 'w', zipfile.ZIP_DEFLATED) as zipf:\n",
+    "        for root, dirs, files in os.walk(folder_path):\n",
+    "            for file in files:\n",
+    "                file_path = os.path.join(root, file)\n",
+    "                arcname = os.path.relpath(file_path, folder_path)\n",
+    "                zipf.write(file_path, arcname)\n",
+    "\n",
+    "# Example usage\n",
+    "zip_folder('../data/images', '../data/images.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e34dfcbb",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Delete corrupted images\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "\n",
+    "def check_and_delete_all_corrupted_images(directory):\n",
+    "    corrupted_files = []\n",
+    "\n",
+    "    # Scan all files and collect corrupted ones\n",
+    "    for filename in os.listdir(directory):\n",
+    "        filepath = os.path.join(directory, filename)\n",
+    "        try:\n",
+    "            with Image.open(filepath) as img:\n",
+    "                img.verify()\n",
+    "        except Exception as e:\n",
+    "            print(f\"Identified corrupted image: {filepath} — {e}\")\n",
+    "            corrupted_files.append(filepath)\n",
+    "\n",
+    "    # # Delete all corrupted files\n",
+    "    # for filepath in corrupted_files:\n",
+    "    #     try:\n",
+    "    #         os.remove(filepath)\n",
+    "    #         print(f\"Deleted corrupted image: {filepath}\")\n",
+    "    #     except Exception as e:\n",
+    "    #         print(f\"Failed to delete {filepath}: {e}\")\n",
+    "\n",
+    "\n",
+    "check_and_delete_all_corrupted_images(\"../data/images\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
