add evaluation notebook

--- a/notebooks/classification/workflow.ipynb
+++ b/notebooks/classification/workflow.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "876c3b95",
+   "metadata": {},
+   "source": [
+    "# CLASSIFICATION TRAINING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "edbe2754",
