--- a/notebooks/object_detection/annotation.ipynb
+++ b/notebooks/object_detection/annotation.ipynb
@@ -48,6 +48,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20429f1d",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "891b866b",
@@ -187,9 +193,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "523d31da",
+   "metadata": {},
+   "source": [
+    "### Generate sample annotation file of 0.2 samples to use for creating augmented datasets\n",
+    "* A sample of the images is taken to generate augmentations on them, sample annotation file is generated before hand so that the same set of sample can be used to test on different types of models to train"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4d3aa80b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### SAMPLE ANNOTATION file\n",
+    "sample_size=0.2\n",
+    "# Load the existing COCO file\n",
+    "with open(Path(\"../data/annotations_v1_v2/coco_v1_v2.json\"), 'r') as f:\n",
+    "    coco_data = json.load(f)\n",
+    "\n",
+    "# 20% of images in the data\n",
+    "aug_size = int(len(coco_data['images'])*sample_size)\n",
+    "\n",
+    "# Select a subset of image IDs\n",
+    "image_ids = [image['id'] for image in coco_data['images']]\n",
+    "\n",
+    "random.seed(42)\n",
+    "\n",
+    "# Adjust 'k' to the desired number of samples\n",
+    "aug_image_ids = random.sample(image_ids, k=aug_size)\n",
+    "print(aug_image_ids[:5], \"\\n\")\n",
+    "\n",
+    "# Filter images and annotations based on the selected image IDs\n",
+    "aug_images = [image for image in coco_data['images'] if image['id'] in aug_image_ids]\n",
+    "aug_annotations = [annotation for annotation in coco_data['annotations'] if annotation['image_id'] in aug_image_ids]\n",
+    "print(len(aug_images), len(aug_annotations))\n",
+    "\n",
+    "# Create the sample COCO file\n",
+    "aug_coco_data = {\n",
+    "    'images': aug_images,\n",
+    "    'annotations': aug_annotations,\n",
+    "    'categories': coco_data['categories'],\n",
+    "    'info': coco_data['info']\n",
+    "}\n",
+    "\n",
+    "# Save the sample COCO file\n",
+    "with open(f\"../data/annotations_v1_v2/coco_v1_v2_{sample_size}.json\", 'w') as f:\n",
+    "    json.dump(aug_coco_data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2a2cf92",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -201,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a2cf92",
+   "id": "3df3161d",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
