--- a/notebooks/segmentation/workflow.ipynb
+++ b/notebooks/segmentation/workflow.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ab254a97",
+   "metadata": {},
+   "source": [
+    "# SEGMENTATION TRAINING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "817f32ac",
@@ -13,8 +21,8 @@
    "source": [
     "import os; os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "import sys\n",
-    "sys.path.append(\"../../../../cds_vision_tools\")\n",
-    "sys.path.append(\"../../../../cds_vision_tools/cds_vision_tools/pytorch\")"
+    "sys.path.append(\"../../src\")\n",
+    "sys.path.append(\"../src\")"
    ]
   },
   {
@@ -87,7 +95,7 @@
    "outputs": [],
    "source": [
     "# Define data directories\n",
-    "seg_data_dir = Path(\"../../../test/cds_vision_tools/pytorch/segmentation/TestProject\")\n",
+    "seg_data_dir = Path(\"../data/segmentation\")\n",
     "# Annotation file\n",
     "path_to_annotation = seg_data_dir / \"annotations-unittest.json\"\n",
     "\n",
@@ -154,8 +162,8 @@
    "outputs": [],
    "source": [
     "# Option 1\n",
-    "image_file = \"../../../test/cds_vision_tools/pytorch/segmentation/TestProject/augmented_images_path/10-29-22-66_20231205-190806-6_augmented.jpg\"\n",
-    "mask_file = \"../../../test/cds_vision_tools/pytorch/segmentation/TestProject/masks/train/10-29-22-66_20231205-190806-6_augmented.pt\"\n",
+    "image_file = \"../data/segmentation/augmented_images_path/10-29-22-66_20231205-190806-6_augmented.jpg\"\n",
+    "mask_file = \"../data/segmentation/masks/train/10-29-22-66_20231205-190806-6_augmented.pt\"\n",
     "load_and_display_image_with_mask(image_file, mask_file)"
    ]
   },
@@ -980,6 +988,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f4d3dbd",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed67e24d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f6fc81b",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
