--- a/notebooks/object_detection/training.ipynb
+++ b/notebooks/object_detection/training.ipynb
@@ -492,6 +492,7 @@
     "model.to(device)\n",
     "\n",
     "# construct an optimizer\n",
+    "# It returns all trainable parameters of the model\n",
     "params = [p for p in model.parameters() if p.requires_grad]\n",
     "optimizer = torch.optim.SGD(params, lr=learning_rate, momentum=momentum, weight_decay=weight_decay)\n",
     "\n",
