add font size and black color

--- a/notebooks/object_detection/eval.ipynb
+++ b/notebooks/object_detection/eval.ipynb
@@ -43,6 +43,7 @@
     "import torch.nn as nn\n",
     "import torchvision\n",
     "import torchvision.transforms as T\n",
+    "import torchvision.transforms as transforms\n",
     "from torch.utils.data import ConcatDataset\n",
     "from torch.utils.data import Dataset, random_split, DataLoader\n",
     "from torchvision.utils import draw_bounding_boxes\n",
@@ -475,7 +476,7 @@
     "num_classes = 2  # 1 class + background; adjust to your training setup\n",
     "\n",
     "model_dir = \"distilled\" # \"frcnn_mobilenet_inter\"\n",
-    "model_name = \"kd_resize_rot_frcnn_mobilenet_epoch8.pth.pth\"\n",
+    "model_name = \"kd_resize_rot_frcnn_mobilenet_epoch8.pth\"\n",
     "model_path = Path(f\"../models/{model_dir}/{model_name}\")\n",
     "\n",
     "video_name = \"100-crop\"\n",
