--- a/notebooks/object_detection/inference.ipynb
+++ b/notebooks/object_detection/inference.ipynb
@@ -198,15 +198,14 @@
     "num_classes = 2  # 1 class + background; adjust to your training setup\n",
     "\n",
     "model_dir = \"../models\" # \"frcnn_mobilenet_inter\"\n",
-    "model_name = \"ftmo_v1.pth\"\n",
+    "model_type = \"v1\"\n",
+    "model_name = f\"ftmo_{model_type}.pth\"\n",
     "model_path = Path(f\"{model_dir}/{model_name}\")\n",
     "\n",
     "input_video_dir = Path(f\"../videos_plant_not_working/raw\")\n",
-    "output_video_dir = Path(f\"../videos_plant_not_working/v1\")\n",
-    "# video_dir = Path(f\"../videos_plant_not_working\")\n",
+    "output_video_dir = Path(f\"../videos_plant_not_working/{model_type}\")\n",
     "\n",
     "video_name = \"111\"\n",
-    "model_type = \"v1\"\n",
     "output_video_name = f\"{video_name}_{model_type}\"\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
@@ -224,17 +223,15 @@
    "outputs": [],
    "source": [
     "##### resnet50_fpn_v2 backbone #####\n",
-    "v1_model_path = Path(\"../models/ftmo_v1.pth\")\n",
+    "print(f\"\\033[91m{model_path}\\033[0m\")\n",
     "\n",
-    "print(f\"\\033[91m{v1_model_path}\\033[0m\")\n",
-    "\n",
-    "v1_model = fasterrcnn_resnet50_fpn_v2(weights=FasterRCNN_ResNet50_FPN_V2_Weights.COCO_V1)\n",
+    "model = fasterrcnn_resnet50_fpn_v2(weights=FasterRCNN_ResNet50_FPN_V2_Weights.COCO_V1)\n",
     "# get number of input features for the classifier\n",
-    "in_features = v1_model.roi_heads.box_predictor.cls_score.in_features\n",
+    "in_features = model.roi_heads.box_predictor.cls_score.in_features\n",
     "# replace the pre-trained head with a new one\n",
-    "v1_model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
-    "v1_model.load_state_dict(torch.load(v1_model_path, weights_only=False,  map_location=torch.device('cpu')))\n",
-    "v1_model.to(device).eval()"
+    "model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
+    "model.load_state_dict(torch.load(model_path, weights_only=False,  map_location=torch.device('cpu')))\n",
+    "model.to(device).eval()"
    ]
   },
   {
@@ -288,7 +285,7 @@
     "    img_pil = Image.fromarray(frame_rgb)\n",
     "\n",
     "    # run detection + visualization (returns PIL)\n",
-    "    frame_vis_pil = visualize_detections(img_pil, v1_model, class_map)\n",
+    "    frame_vis_pil = visualize_detections(img_pil, model, class_map)\n",
     "\n",
     "    # PIL -> OpenCV (BGR)\n",
     "    frame_vis = cv2.cvtColor(np.array(frame_vis_pil), cv2.COLOR_RGB2BGR)\n",
@@ -341,13 +338,13 @@
     "num_classes = 2  # 1 class + background; adjust to your training setup\n",
     "\n",
     "model_dir = \"../models\" # \"frcnn_mobilenet_inter\"\n",
-    "model_name = \"ftmo_v1.pth\"\n",
+    "model_type = \"v2\"\n",
+    "model_name = f\"ftmo_{model_type}.pth\"\n",
     "model_path = Path(f\"{model_dir}/{model_name}\")\n",
     "\n",
     "input_video_dir = Path(f\"../videos_plant_not_working/raw\")\n",
-    "output_video_dir = Path(f\"../videos_plant_not_working/v1\")\n",
+    "output_video_dir = Path(f\"../videos_plant_not_working/{model_type}\")\n",
     "\n",
-    "model_type = \"v1\"\n",
     "raw_videos = os.listdir(input_video_dir)\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
@@ -365,17 +362,15 @@
    "outputs": [],
    "source": [
     "##### resnet50_fpn_v2 backbone #####\n",
-    "v1_model_path = Path(\"../models/ftmo_v1.pth\")\n",
+    "print(f\"\\033[91m{model_path}\\033[0m\")\n",
     "\n",
-    "print(f\"\\033[91m{v1_model_path}\\033[0m\")\n",
-    "\n",
-    "v1_model = fasterrcnn_resnet50_fpn_v2(weights=FasterRCNN_ResNet50_FPN_V2_Weights.COCO_V1)\n",
+    "model = fasterrcnn_resnet50_fpn_v2(weights=FasterRCNN_ResNet50_FPN_V2_Weights.COCO_V1)\n",
     "# get number of input features for the classifier\n",
-    "in_features = v1_model.roi_heads.box_predictor.cls_score.in_features\n",
+    "in_features = model.roi_heads.box_predictor.cls_score.in_features\n",
     "# replace the pre-trained head with a new one\n",
-    "v1_model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
-    "v1_model.load_state_dict(torch.load(v1_model_path, weights_only=False,  map_location=torch.device('cpu')))\n",
-    "v1_model.to(device).eval()"
+    "model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
+    "model.load_state_dict(torch.load(model_path, weights_only=False,  map_location=torch.device('cpu')))\n",
+    "model.to(device).eval()"
    ]
   },
   {
@@ -419,7 +414,7 @@
     "        img_pil = Image.fromarray(frame_rgb)\n",
     "    \n",
     "        # run detection + visualization (returns PIL)\n",
-    "        frame_vis_pil = visualize_detections(img_pil, v1_model, class_map)\n",
+    "        frame_vis_pil = visualize_detections(img_pil, model, class_map)\n",
     "    \n",
     "        # PIL -> OpenCV (BGR)\n",
     "        frame_vis = cv2.cvtColor(np.array(frame_vis_pil), cv2.COLOR_RGB2BGR)\n",
